# xOpenGLEngine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Include/GLFW/: glfw3.h
Include/glad/: glad.h
Include/glm/detail/: func_common.inl
Libraries/: glfw3.lib
src/HeaderFiles/: DisplayManager.h  Shader.h
src/SourceFiles/: DisplayManager.cpp  Shader.cpp  glad.c
